fix align items height on footer

--- a/src/components/FooterComponent/FooterComponent.module.css
+++ b/src/components/FooterComponent/FooterComponent.module.css
@@ -10,7 +10,8 @@
 .Footer1{
     border-bottom: #DADCE0 solid 1px;
     text-align: left;
-    height: 47px;
+    height: 30px;
+    padding-top: 15px;
 }
 
 .Footer1 span{
@@ -24,7 +25,8 @@
 .Footer2{
     display: flex;
     flex-direction: row;
-    height: 47px;
+    height: 30px;
+    padding-top: 15px;
 }
 
 .Footer2 span:hover{
